cmake_minimum_required(VERSION 3.20)
project(untitled1)

set(CMAKE_CXX_STANDARD 23)

add_executable(untitled1 main.cpp chapter4.cpp chapter19.cpp chapter5.cpp chapter6.cpp chapter15.cpp chapter7.cpp chapter12.cpp chapter9.cpp chapter14.cpp chapter18.cpp chapter24.cpp chapter17.cpp chapter16.cpp chapter13.cpp chapter10.cpp)
